NLP TP/texts/robotics/robotics.stackexchange_0000047812.txt
Q:

After update ubuntu 12.04 and groovy, ros doesn't work more?

I installed groovy distributed by nootrix. I updated the system with updates of ubuntu and groovy. But after update, it doesn't work more and there is no roscore command now.
When I used command source /opt/ros/groovy/setup.bash to set the environment, there is error as following:
File "<string>", line 1
    import os; print(os.pathsep.join([x for x in "/opt/ros/groovy/bin:# reset environment variables by unrolling modifications based on all workspaces in CMAKE_PREFIX_PATH
                                                                                                                                                                         ^
SyntaxError: EOL while scanning string literal
bash: cat: No such file or directory
bash: python: No such file or directory
/usr/bin/env: python: No such file or directory
/usr/bin/env: python: No such file or directory
/usr/bin/env: python: No such file or directory
/usr/bin/env: python: No such file or directory
/usr/bin/env: python: No such file or directory
bash: which: No such file or directory
bash: which: No such file or directory

Can anyone help me, thank you!

Originally posted by caesarhao on ROS Answers with karma: 1 on 2013-01-31
Post score: 2

Original comments
Comment by joq on 2013-01-31:
What is nootrix? Do you have any problem installing ROS using the normal instructions? http://www.ros.org/wiki/groovy/Installation/Ubuntu
Comment by aswin on 2013-01-31:
Does the file /opt/ros/groovy/setup.bash exist?

A:

I am experiencing the same issue. I posted a comment on the Nootrix page here, and they gave a solution, but it didn't work for me. I posted my results in the comments on that page, but they're currently awaiting moderation. In essence, the problem seems to be related to the ~/catkin_ws/devel/setup.bash script; after running it, several environment variables are set like this (here's my PATH variable):

viki@c3po:~$ echo $PATH
# reset environment variables by unrolling modifications based on all workspaces in CMAKE_PREFIX_PATH export CMAKE_PREFIX_PATH=”" export PATH=”/usr/lib/lightdm/lightdm:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games” export PKG_CONFIG_PATH=”" export PYTHONPATH=”" # prepend folders of workspaces to environment variables export CMAKE_PREFIX_PATH=”/opt/ros/groovy” export CPATH=”/opt/ros/groovy/include:$CPATH” export LD_LIBRARY_PATH=”/opt/ros/groovy/lib:$LD_LIBRARY_PATH” export PATH=”/opt/ros/groovy/bin:$PATH” export PKG_CONFIG_PATH=”/opt/ros/groovy/lib/pkgconfig” export PYTHONPATH=”/opt/ros/groovy/lib/python2.7/dist-packages”/opt/ros/groovy/bin:/usr/lib/lightdm/lightdm:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games

Clearly, there's stuff in there that shouldn't be there. But I'm also running ROS on a non-VM install of Ubuntu with ROS Groovy, and catkin works fine after system updates there. So there does seem to be be something about the version in the Nootrix VM.

Originally posted by Jeffrey Kane Johnson with karma: 452 on 2013-02-03
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by KruseT on 2013-02-03:
Can you tar all files in ~/catkin_ws/, and create a ticket on catkin in github attaching the tar, so we can inspect what goes wrong, please? subfolders should not be required. Also if you can post the version of catkin from catkin_ws/src/catkin/package.xml that might help.
Comment by Jeffrey Kane Johnson on 2013-02-03:
Sure, I'll do that tomorrow. I should note that the problem described in the comments of Nootrix page (linked above) with the PATH variable being emptied do occur on my non-VM install of ROS. It's only in the VM version that I'm getting the above problem with garbage in PATH.
Comment by Jeffrey Kane Johnson on 2013-02-04:
Turns out there was a very simple fix for the environment variables issue: I re-initialized the catkin workspace and then I did a catkin_make. Everything now works as expected. Thanks!

